    src/cmd/cmd_initbus.c, src/cmd/cmd_instruction.c, src/cmd/cmd_print.c,
    src/cmd/cmd_readmem.c, src/cmd/cmd_salias.c, src/cmd/cmd_set.c,
    src/cmd/cmd_shift.c, src/cmd/cmd_test.c: Add new tokens arg to completion
    handlers.

  * src/cmd/cmd_endian.c (cmd_endian_complete): Add matches based on existing
    local array of strings.

2011-06-27  Jie Zhang  <jie.zhang@analog.com>

  * include/urjtag/Makefile.am (nodist_pkginclude_HEADERS): New and
    add urjtag.h.

2011-06-27  Mike Frysinger  <vapier@gentoo.org>

  * src/bsdl/Makefile.am, src/svf/Makefile.am: Update dependency targets
    to fix parallel build issues with bison/flex generated headers.

2011-06-27  Jie Zhang  <jie.zhang@analog.com>

  * include/urjtag/Makefile.am (pkginclude_HEADERS): Remove urjtag.h.
  * extra/fjmem/Makefile.am: New file.
  * src/jim/Makefile.am (EXTRA_DIST): New.
  * src/pld/Makefile.am (libpld_la_SOURCES): Add xilinx.h.
  * src/bus/Makefile.am (libbus_la_SOURCES): Add blackfin.h.
  * src/bfin/Makefile.am (libbfin_la_SOURCES): Add bfin-part.h.
  * configure.ac: Add extra/fjmem/Makefile to AC_CONFIG_FILES.
  * data/Makefile.am (nobase_dist_pkgdata_DATA): Add
    xilinx/xc18v02pc44/xc18v02pc44 and xilinx/xc18v02pc44/STEPPINGS.
  * Makefile.am (SUBDIRS): Add extra/fjmem.

2011-06-27  Mike Frysinger  <vapier@gentoo.org>

  * include/urjtag/cmd.h, src/cmd/cmd.h, src/cmd/cmd_cmd.c: Move prototypes
    for some useful command related functions to the public cmd.h header.
    In the process, constify the array passed into urj_cmd_params.

  * include/urjtag/bus.h, src/bus/buses.c, src/cmd/cmd_initbus.c: Pull the
    guts of cmd_initbus_run() out into a new helper func named
    urj_bus_init().  Patch by Steve Tell.
  * include/urjtag/chain.h, src/cmd/cmd_cable.c, src/tap/chain.c: Pull the
    guts of cmd_cable_run() out into a new helper func named
    urj_tap_chain_connect().  Patch by Steve Tell.

  * configure.ac: Split out summary info into related sections.
